--- a/src/app/pages/apps/sale/customers/customers.component.html
+++ b/src/app/pages/apps/sale/customers/customers.component.html
@@ -6,13 +6,13 @@
     <mat-card-content>
       <!-- FIRST ROW :  FIRST NAME + LAST NAME +  COMPANY NAME -->
       <div class="row">
-        <!-- FIRST NAME -->
-        <div class="col-md-4 d-flex flex-column">
+        <!-- Contact NAME -->
+        <div class="col-md-3 d-flex flex-column">
           <div class="d-flex align-items-center">
-            <mat-label class="mat-subtitle-2 f-w-600 d-block m-b-16">First Name</mat-label>
+            <mat-label class="mat-subtitle-2 f-w-600 d-block m-b-16">Contact Name</mat-label>
           </div>
           <mat-form-field appearance="outline" class="w-100">
-            <input matInput placeholder="First Name" [(ngModel)]="ADDED_CUSTOMER.first_name"
+            <input matInput placeholder="Contact Name" [(ngModel)]="ADDED_CUSTOMER.first_name"
               (ngModelChange)="onInputChange()" />
             <mat-icon matPrefix class="op-5">
               <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
@@ -23,25 +23,25 @@
             </mat-icon>
           </mat-form-field>
         </div>
-        <!-- LAST NAME-->
-        <div class="col-md-4 d-flex flex-column">
+        <!-- COMPANY NAME -->
+        <div class="col-md-3 d-flex flex-column">
           <div class="d-flex align-items-center">
-            <mat-label class="mat-subtitle-2 f-w-600 d-block m-b-16">Last Name</mat-label>
+            <mat-label class="mat-subtitle-2 f-w-600 d-block m-b-16">Company Name</mat-label>
           </div>
           <mat-form-field appearance="outline" class="w-100">
-            <input matInput placeholder="Last Name" [(ngModel)]="ADDED_CUSTOMER.last_name"
+            <input matInput placeholder="Company Name" [(ngModel)]="ADDED_CUSTOMER.company_name"
               (ngModelChange)="onInputChange()" />
             <mat-icon matPrefix class="op-5">
               <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
                 fill="#5f6368">
                 <path
-                  d="M480-480q-66 0-113-47t-47-113q0-66 47-113t113-47q66 0 113 47t47 113q0 66-47 113t-113 47ZM160-160v-112q0-34 17.5-62.5T224-378q62-31 126-46.5T480-440q66 0 130 15.5T736-378q29 15 46.5 43.5T800-272v112H160Zm80-80h480v-32q0-11-5.5-20T700-306q-54-27-109-40.5T480-360q-56 0-111 13.5T260-306q-9 5-14.5 14t-5.5 20v32Zm240-320q33 0 56.5-23.5T560-640q0-33-23.5-56.5T480-720q-33 0-56.5 23.5T400-640q0 33 23.5 56.5T480-560Zm0-80Zm0 400Z" />
+                  d="M120-120v-560h160v-160h400v320h160v400H520v-160h-80v160H120Zm80-80h80v-80h-80v80Zm0-160h80v-80h-80v80Zm0-160h80v-80h-80v80Zm160 160h80v-80h-80v80Zm0-160h80v-80h-80v80Zm0-160h80v-80h-80v80Zm160 320h80v-80h-80v80Zm0-160h80v-80h-80v80Zm0-160h80v-80h-80v80Zm160 480h80v-80h-80v80Zm0-160h80v-80h-80v80Z" />
               </svg>
             </mat-icon>
           </mat-form-field>
         </div>
         <!-- EMAIL-->
-        <div class="col-md-4 d-flex flex-column">
+        <div class="col-md-3 d-flex flex-column">
           <div class="d-flex align-items-center">
             <mat-label class="mat-subtitle-2 f-w-600 d-block m-b-16">Email (optional)</mat-label>
           </div>
@@ -57,17 +57,15 @@
             </mat-icon>
           </mat-form-field>
         </div>
-      </div>
 
-      <!-- SECOND ROW :  EMAIL + PHONE + SALE -->
-      <div class="row">
         <!-- PHONE-->
-        <div class="col-md-6 d-flex flex-column">
+        <div class="col-md-3 d-flex flex-column">
           <div class="d-flex align-items-center">
-            <mat-label class="mat-subtitle-2 f-w-600 d-block m-b-16">Phone</mat-label>
+            <mat-label class="mat-subtitle-2 f-w-600 d-block m-b-16">Phone (optional)</mat-label>
           </div>
           <mat-form-field appearance="outline" class="w-100">
-            <input matInput placeholder="Phone" [(ngModel)]="ADDED_CUSTOMER.number" (ngModelChange)="onInputChange()" />
+            <input matInput placeholder="Phone (OPTIONAL)" [(ngModel)]="ADDED_CUSTOMER.number" (ngModelChange)="onInputChange()"
+              type="number" />
             <mat-icon matPrefix class="op-5">
               <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
                 fill="#5f6368">
@@ -77,23 +75,7 @@
             </mat-icon>
           </mat-form-field>
         </div>
-        <!-- COMPANY NAME -->
-        <div class="col-md-6 d-flex flex-column">
-          <div class="d-flex align-items-center">
-            <mat-label class="mat-subtitle-2 f-w-600 d-block m-b-16">Company Name (optional)</mat-label>
-          </div>
-          <mat-form-field appearance="outline" class="w-100">
-            <input matInput placeholder="Company Name (OPTIONAL)" [(ngModel)]="ADDED_CUSTOMER.company_name"
-              (ngModelChange)="onInputChange()" />
-            <mat-icon matPrefix class="op-5">
-              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
-                fill="#5f6368">
-                <path
-                  d="M120-120v-560h160v-160h400v320h160v400H520v-160h-80v160H120Zm80-80h80v-80h-80v80Zm0-160h80v-80h-80v80Zm0-160h80v-80h-80v80Zm160 160h80v-80h-80v80Zm0-160h80v-80h-80v80Zm0-160h80v-80h-80v80Zm160 320h80v-80h-80v80Zm0-160h80v-80h-80v80Zm0-160h80v-80h-80v80Zm160 480h80v-80h-80v80Zm0-160h80v-80h-80v80Z" />
-              </svg>
-            </mat-icon>
-          </mat-form-field>
-        </div>
+
       </div>
 
       <div class="Buttons_div">
@@ -177,10 +159,10 @@
     </div>
 
     @if(CUSTOMMERS_ARRAY_LENGTH===0 && !show_shimmer){
-      <div class="no-items-found">
-        <app-no-items-found></app-no-items-found>
-      </div>
-      }
+    <div class="no-items-found">
+      <app-no-items-found></app-no-items-found>
+    </div>
+    }
 
     }
 
