--- a/src/app/pages/apps/products/products-dialog-content.html
+++ b/src/app/pages/apps/products/products-dialog-content.html
@@ -1,79 +1,39 @@
-<h2 mat-dialog-title>{{action}}</h2>
-@if(action === 'add') {
-<mat-dialog-content style="max-width: 500px" class="mat-typography m-t-24">
-  <form #userForm="ngForm">
-    <div class="row">
-      <div class="col-sm-6 col-lg-12">
-        <mat-form-field appearance="outline" class="w-100">
-          <input type="text" matInput required id="id" name="id" [(ngModel)]="local_data.id" placeholder="id" />
-        </mat-form-field>
-      </div>
-      <div class="col-sm-6 col-lg-12">
-        <mat-form-field appearance="outline" class="w-100">
-          <input type="text" matInput required id="title" name="title" [(ngModel)]="local_data.title"
-            placeholder="ticket title" />
-        </mat-form-field>
-      </div>
-      <div class="col-sm-6 col-lg-12">
-        <mat-form-field appearance="outline" class="w-100">
-          <input type="text" matInput required id="subtext" name="subtext" [(ngModel)]="local_data.subtext"
-            placeholder="ticket subtext" />
-        </mat-form-field>
-      </div>
-      <div class="col-sm-6 col-lg-12">
-        <mat-form-field appearance="outline" class="w-100">
-          <input type="text" matInput required id="assignee" name="assignee" [(ngModel)]="local_data.assignee"
-            placeholder="assigned to" />
-        </mat-form-field>
-      </div>
-      <div class="col-sm-6 col-lg-12">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Status</mat-label>
-          <select matNativeControl required name="status" [(ngModel)]="local_data.status">
-            <option value="inprogress">In Progress</option>
-            <option value="open">Open</option>
-            <option value="closed">Closed</option>
-          </select>
-        </mat-form-field>
-      </div>
-      <div class="col-sm-6 col-lg-12">
-        <mat-form-field appearance="outline" class="w-100">
-          <input type="date" matInput required id="date" name="date" [(ngModel)]="local_data.date" placeholder="date" />
-        </mat-form-field>
-      </div>
-    </div>
-  </form>
-</mat-dialog-content>
-}
+<h2 class="f-w-500" mat-dialog-title><strong>{{action}}</strong></h2>
 
-@if(action === 'Add Category') {
-  <mat-dialog-content style="max-width: 500px" class="mat-typography m-t-24">
-    <form #userForm="ngForm">
-      <div class="row">
-        <div class="col-sm-6 col-lg-12">
-          <mat-form-field appearance="outline" class="w-100">
-            <input type="text" matInput required id="id" name="id" [(ngModel)]="local_data.id" placeholder="id" />
-          </mat-form-field>
-        </div>
-        <div class="col-sm-6 col-lg-12">
-          <mat-form-field appearance="outline" class="w-100">
-            <input type="text" matInput required id="title" name="title" [(ngModel)]="local_data.title"
-              placeholder="Category Name" />
-          </mat-form-field>
-        </div>
-       
-      </div>
-    </form>
-  </mat-dialog-content>
-  }
-
-@if(action === 'Delete')  {
+@if(action == 'Delete') {
 <div class="p-x-24 p-b-24">
-  Sure to delete <span class="f-w-600">{{local_data.title}}</span>?
+  Sure to delete <span class="f-w-600">{{data.name}}</span>?
 </div>
-}
 
 <div mat-dialog-actions class="two_buttons_div">
-  <button mat-stroked-button (click)="closeDialog()">Cancel</button>
-  <button mat-flat-button (click)="doAction()" color="primary">{{action}}</button>
+  <button mat-stroked-button (click)="CLOSE_DIALOG('Cancel')">Cancel</button>
+  <button mat-flat-button (click)="doAction()" color="primary">Delete</button>
 </div>
+}
+
+@else if(action == 'Add Category') {
+  <!-- FIRST ROW :  NAME  -->
+  <div class="p-x-24">  
+    <!-- NAME -->
+    <div class="col-md-12 d-flex flex-column">
+      <div class="d-flex align-items-center">
+        <mat-label class="mat-subtitle-2 f-w-600 d-block m-b-16">NEW CATEGORY NAME</mat-label>
+      </div>
+      <mat-form-field appearance="outline" class="w-100">
+        <input [(ngModel)]="NEW_CATEGORY" matInput placeholder="Name"/>
+        <mat-icon matPrefix class="op-5">
+          <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368">
+            <path
+              d="M480-480q-66 0-113-47t-47-113q0-66 47-113t113-47q66 0 113 47t47 113q0 66-47 113t-113 47ZM160-160v-112q0-34 17.5-62.5T224-378q62-31 126-46.5T480-440q66 0 130 15.5T736-378q29 15 46.5 43.5T800-272v112H160Zm80-80h480v-32q0-11-5.5-20T700-306q-54-27-109-40.5T480-360q-56 0-111 13.5T260-306q-9 5-14.5 14t-5.5 20v32Zm240-320q33 0 56.5-23.5T560-640q0-33-23.5-56.5T480-720q-33 0-56.5 23.5T400-640q0 33 23.5 56.5T480-560Zm0-80Zm0 400Z" />
+          </svg>
+        </mat-icon>
+      </mat-form-field>
+    </div>
+
+  </div>
+  
+  <div mat-dialog-actions class="two_buttons_div">
+    <button mat-stroked-button (click)="CLOSE_DIALOG('Cancel')">Cancel</button>
+    <button mat-flat-button (click)="doAction()" color="primary">Add</button>
+  </div>
+  }
