--- a/src/app/pages/apps/products/products.component.html
+++ b/src/app/pages/apps/products/products.component.html
@@ -23,7 +23,6 @@
             </mat-icon>
           </mat-form-field>
         </div>
-
         <!-- BARCODE-->
         <div class="col-md-4 d-flex flex-column">
           <div class="d-flex align-items-center">
@@ -31,15 +30,15 @@
           </div>
           <mat-form-field appearance="outline" class="w-100">
             <div class="d-flex position-relative">
-                <mat-icon matPrefix class="op-5 barcode_svg">
-                  <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
-                    fill="#5f6368">
-                    <path
-                      d="M40-200v-560h80v560H40Zm120 0v-560h80v560h-80Zm120 0v-560h40v560h-40Zm120 0v-560h80v560h-80Zm120 0v-560h120v560H520Zm160 0v-560h40v560h-40Zm120 0v-560h120v560H800Z" />
-                  </svg>
-                </mat-icon>
-                <input class="QR_INPUT" matInput placeholder="Barcode" [(ngModel)]="ADDED_PRODUCT.barcode" readonly=""
-                  (ngModelChange)="onInputChange()" />
+              <mat-icon matPrefix class="op-5 barcode_svg">
+                <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+                  fill="#5f6368">
+                  <path
+                    d="M40-200v-560h80v560H40Zm120 0v-560h80v560h-80Zm120 0v-560h40v560h-40Zm120 0v-560h80v560h-80Zm120 0v-560h120v560H520Zm160 0v-560h40v560h-40Zm120 0v-560h120v560H800Z" />
+                </svg>
+              </mat-icon>
+              <input class="QR_INPUT" matInput placeholder="Barcode" [(ngModel)]="ADDED_PRODUCT.barcode" readonly=""
+                (ngModelChange)="onInputChange()" />
               @if(CurrentAction == 'Add Product'){
               <div class="d-flex align-items-center">
                 <mat-icon matPrefix class="generate_code_button" (click)="GENERATE_BARCODE()">
@@ -72,17 +71,17 @@
 
             <mat-autocomplete #auto="matAutocomplete">
               @for(category of categoryArray; track category){
-              <mat-option [value]="category.CategoryName">{{ category.CategoryName }}</mat-option>
+              <mat-option [value]="category">{{ category }}</mat-option>
               }
 
-              <mat-option (click)="OPEN_DIALOG('Add Category', ADDED_PRODUCT)">
+              <mat-option class="add-new-option" (click)="OPEN_DIALOG('Add Category', ADDED_PRODUCT)">
                 <div class="option-content d-flex flex-row gap-10">
                   <svg xmlns="http://www.w3.org/2000/svg" class="icon-20 d-flex" height="24px" viewBox="0 -960 960 960"
                     width="24px" fill="#5c8305">
                     <path
                       d="M720-400v-120H600v-80h120v-120h80v120h120v80H800v120h-80Zm-360-80q-66 0-113-47t-47-113q0-66 47-113t113-47q66 0 113 47t47 113q0 66-47 113t-113 47ZM40-160v-112q0-34 17.5-62.5T104-378q62-31 126-46.5T360-440q66 0 130 15.5T616-378q29 15 46.5 43.5T680-272v112H40Zm80-80h480v-32q0-11-5.5-20T580-306q-54-27-109-40.5T360-360q-56 0-111 13.5T140-306q-9 5-14.5 14t-5.5 20v32Zm240-320q33 0 56.5-23.5T440-640q0-33-23.5-56.5T360-720q-33 0-56.5 23.5T280-640q0 33 23.5 56.5T360-560Zm0-80Zm0 400Z" />
                   </svg>
-                  <span>Add new product</span>
+                  <span>Add new Category</span>
                 </div>
               </mat-option>
             </mat-autocomplete>
@@ -93,8 +92,6 @@
 
       <!-- SECOND ROW :  CATEGORY + COST + SALE -->
       <div class="row">
-
-
         <!-- COST -->
         <div class="col-md-6 d-flex flex-column">
           <div class="d-flex align-items-center">
@@ -215,11 +212,10 @@
       <!-- STATUS -->
       <div class="dropdown">
         <mat-form-field appearance="outline" class="w-100">
-          <mat-select p placeholder="All" [(ngModel)]="selectedStatusFilteraTION"
-            (selectionChange)="DROPDOWN_FILTERATION($event.value, 'status')">
-            @for(element of Status_Array_Filter; track element) {
-            <mat-option value={{element.value}}>{{element.viewValue}}</mat-option>
-            }
+          <mat-select p placeholder="All" [(ngModel)]="SELECTED_CATEGORY_FILTERATION"
+            (selectionChange)="DROPDOWN_FILTERATION($event.value, 'category')">
+            @for(element of CATEGORY_Array_Filter; track element) {
+            <mat-option value={{element}}>{{element}}</mat-option>}
 
           </mat-select>
           <mat-icon matPrefix class="op-5">
