--- a/src/app/pages/apps/sale/sale-invoice/sale-invoice.component.html
+++ b/src/app/pages/apps/sale/sale-invoice/sale-invoice.component.html
@@ -1,12 +1,12 @@
 <!-- WHOLE TABLE -->
 <mat-card class="cardWithShadow">
- 
-      <!-- TABLE HEADER -->
+
+  <!-- TABLE HEADER -->
   <header>
 
     <div class="searchbar p-20">
       <mat-form-field appearance="outline" class="w-100">
-        <input matInput placeholder="Search Product..." aria-label="Product"
+        <input matInput placeholder="Search Invoice..." aria-label="Product"
           (keyup)="APPLY_SEARCH_FILTER($any($event.target).value)">
         <mat-icon matPrefix class="op-5">
           <svg xmlns="http://www.w3.org/2000/svg" class="icon-20 d-flex" height="24px" viewBox="0 -960 960 960"
@@ -58,6 +58,25 @@
         </div>
       </section>
 
+      <!-- PAYMENT OPTION -->
+      <div class="dropdown">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-select value="full">
+            <mat-option value="full">Paid</mat-option>
+            <mat-option value="partial">Debit</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+
+      <!-- PAYMENT OPTION -->
+      <div class="dropdown">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-select value="full">
+            <mat-option value="full">Customer Name</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+
       <!-- Download As -->
       <div class="dropdown">
         <mat-form-field appearance="outline" class="w-100">
@@ -80,77 +99,83 @@
     </div>
 
   </header>
-  
-      <mat-card-content>
-  
-  <!-- TABLE BODY -->
-  <div class="table-responsive">
-  <table mat-table [dataSource]="purchaseInvoicesArray" multiTemplateDataRows>
-  
-  <!-- Iterate over displayedColumns using ngFor -->
-  <ng-container *ngFor="let column of displayedColumns;">
-      <ng-container matColumnDef="{{ column }}">
-                
-      <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14 p-x-24 p-l-0">{{ column | titlecase }}</th>
-      <td mat-cell *matCellDef="let element" class="p-x-24 f-s-14 p-l-0" (click)="expandRow($event, element, column)">
-  
-          <!-- Check if the column is 'status' -->
-          <ng-container *ngIf="column !== 'action'; else actionColumn">
-            {{ element[column] }}
+
+  <mat-card-content>
+
+    <!-- TABLE BODY -->
+    <div class="table-responsive">
+      <table mat-table [dataSource]="SALES_INVIOCE_ARRAY" multiTemplateDataRows>
+
+        <!-- Iterate over displayedColumns using ngFor -->
+        @for( column of displayedColumns; track column) {
+
+        <ng-container>
+          <ng-container matColumnDef="{{ column }}">
+
+            <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14 p-x-24 p-l-0">
+              {{ TableHeaders[displayedColumns.indexOf(column)] | titlecase }}</th>
+            <td mat-cell *matCellDef="let element" class="p-x-24 f-s-14 p-l-0"
+              (click)="expandRow($event, element, column)">
+
+              <!-- Check if the column is 'status' -->
+              <ng-container *ngIf="column !== 'action'; else actionColumn">
+                {{ element[column] }}
+              </ng-container>
+
+              <!-- Apply specific design if the column is 'status' -->
+
+
+              <ng-template #actionColumn>
+                <div class="action-link">
+                  <a (click)="EDIT_PRODUCT(element)" class="m-r-10 cursor-pointer"><i-tabler name="edit"
+                      class="icon-18"></i-tabler></a>
+                  <a class="m-r-10 cursor-pointer" (click)="OPEN_DIALOG('Delete',element)"><i-tabler name="trash"
+                      class="icon-18"></i-tabler></a>
+                </div>
+              </ng-template>
+
+            </td>
           </ng-container>
-    
-          <!-- Apply specific design if the column is 'status' -->
-    
-          
-          <ng-template #actionColumn>
-              <div class="action-link">
-              <a (click)="EDIT_PRODUCT(element)" class="m-r-10 cursor-pointer"><i-tabler name="edit" class="icon-18"></i-tabler></a>
-              <a class="m-r-10 cursor-pointer" (click)="OPEN_DIALOG('Delete',element)"><i-tabler name="trash" class="icon-18"></i-tabler></a>
-              </div>
-          </ng-template>
-  
-          </td>
-      </ng-container>
-  </ng-container>
-    
-            <!-- EXPANDED ROW DETAILS -->
-            <ng-container matColumnDef="expandedDetail">
-              <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
-                <div [@detailExpand]="element === expandedElement ? 'expanded' : 'collapsed'">
-                  <div class="p-15 rounded b-1 m-b-16 m-x-18">
-                    <div class="d-flex align-items-center gap-12">
-                      <span
-                        class="bg-light-primary text-primary icon-48 rounded f-w-600 d-flex align-items-center justify-content-center">
-                        {{ element.barcode }}
-                      </span>
-                      <div>
-                        <div class="f-s-14 f-w-600 mat-subtitle-1">
-                          {{ element.name }}
-                        </div>
-                        <div class="p-x-24 f-s-14 p-l-0">{{ element.status }}</div>
-                      </div>
+        </ng-container>
+        }
+        <!-- EXPANDED ROW DETAILS -->
+        <ng-container matColumnDef="expandedDetail">
+          <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
+            <div [@detailExpand]="element === expandedElement ? 'expanded' : 'collapsed'">
+              <div class="p-15 rounded b-1 m-b-16 m-x-18">
+                <div class="d-flex align-items-center gap-12">
+                  <span
+                    class="bg-light-primary text-primary icon-48 rounded f-w-600 d-flex align-items-center justify-content-center">
+                    {{ element.barcode }}
+                  </span>
+                  <div>
+                    <div class="f-s-14 f-w-600 mat-subtitle-1">
+                      {{ element.name }}
                     </div>
-                    <div class="f-s-14 m-t-8">
-                      {{ element.note }}
-                    </div>
+                    <div class="p-x-24 f-s-14 p-l-0">{{ element.status }}</div>
                   </div>
                 </div>
-              </td>
-            </ng-container>
-    
-            <!-- HEADER AND ROW DEFINITIONS -->
-  <tr mat-header-row *matHeaderRowDef="columnsToDisplayWithExpand"></tr>
-  <tr mat-row *matRowDef="let element; columns: columnsToDisplayWithExpand" class="example-element-row"
-      [class.example-expanded-row]="expandedElement === element"
-      (click)="expandedElement = expandedElement === element ? null : element;">
-  </tr>
-  <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
-  
-  </table>
-  </div>
-    
-        <!-- TABLE PAGINATION -->
-        <mat-paginator [pageSizeOptions]="[10, 20, 30]" showFirstLastButtons>
-        </mat-paginator>
-      </mat-card-content>
-    </mat-card>
+                <div class="f-s-14 m-t-8">
+                  {{ element.note }}
+                </div>
+              </div>
+            </div>
+          </td>
+        </ng-container>
+
+        <!-- HEADER AND ROW DEFINITIONS -->
+        <tr mat-header-row *matHeaderRowDef="columnsToDisplayWithExpand"></tr>
+        <tr mat-row *matRowDef="let element; columns: columnsToDisplayWithExpand" class="example-element-row"
+          [class.example-expanded-row]="expandedElement === element"
+          (click)="expandedElement = expandedElement === element ? null : element;">
+        </tr>
+        <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+
+      </table>
+    </div>
+
+    <!-- TABLE PAGINATION -->
+    <mat-paginator [pageSizeOptions]="[10, 20, 30]" showFirstLastButtons>
+    </mat-paginator>
+  </mat-card-content>
+</mat-card>
